--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
         <title>WebScockets 101</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
         <link href="/style.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@800&display=swap" rel="stylesheet">
     </head>
     <body>
         
         <div id="mario-chat">
-            <h2>Mario Chat</h2>
+            <h2>Pretending to be like Whatsapp</h2>
             <div id="chat-window">
                 <div id="output"></div>
                 <div id="feedback"></div>
